force-app/main/default/objects/Case/fields/DisputeAnalyst__c.field-meta.xml
<CustomField>
    <fullName>DisputeAnalyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute Analyst</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&apos;04 NSC UI Administrator&apos;</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>DisputeCase</relationshipName>
    <type>Lookup</type>
</CustomField>