force-app/main/default/objects/Case/fields/Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Amount__c</fullName>
    <description>This is the amount that is being disputed from the invoices.</description>
    <inlineHelpText>This is the amount that is being disputed from the invoices.</inlineHelpText>
    <label>Disputed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>