force-app/main/default/objects/Case/fields/DRT_Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>DRT_Escalated_To__c</fullName>
    <label>Escalated To(Email)</label>
    <type>Email</type>
</CustomField>