force-app/main/default/objects/Case/fields/Duplicate_Case__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used if there is a duplicate case already made for the account</description>
    <label>Duplicate Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>