force-app/main/default/objects/Case/fields/EC_Case_with_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>EC_Case_with_Dispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is checked when a Case with Experience Cloud is created with Dispatch request</description>
    <label>EC Case with Dispatch</label>
    <type>Checkbox</type>
</CustomField>