force-app/main/default/objects/Case/fields/Eloqua_Form_Submit_Time__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Form_Submit_Time__c</fullName>
    <description>Date and time in submitted form</description>
    <label>Form Submit Time</label>
    <type>DateTime</type>
</CustomField>