force-app/main/default/objects/Case/fields/ERP_Dispute_Nbr__c.field-meta.xml
<CustomField>
    <fullName>ERP_Dispute_Nbr__c</fullName>
    <label>ERP Dispute Nbr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>