force-app/main/default/objects/Case/fields/Error_Omission__c.field-meta.xml
<CustomField>
    <fullName>Error_Omission__c</fullName>
    <label>Error/Omission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer error/omission</fullName>
            </value>
            <value>
                <fullName>NCR error/omission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>