force-app/main/default/objects/Case/fields/Escalated_to__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to__c</fullName>
    <label>Escalated to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>