force-app/main/default/objects/Case/fields/Exception_Back_Bill__c.field-meta.xml
<CustomField>
    <fullName>Exception_Back_Bill__c</fullName>
    <label>Exception Back Bill $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>