force-app/main/default/objects/Case/fields/Exception_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Exception_Dollars__c</fullName>
    <inlineHelpText>The difference between the actual Back Bill dollars found versus the amount submitted to the BOC.</inlineHelpText>
    <label>Exception Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>