force-app/main/default/objects/Case/fields/Expired_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expired_Service_Contract__c</fullName>
    <description>This picklist field will be used for why the service contract was expired</description>
    <inlineHelpText>Why was the service contract expired</inlineHelpText>
    <label>Expired Service Contracts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Renewed</fullName>
            </value>
            <value>
                <fullName>Updated Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>