force-app/main/default/objects/Case/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <inlineHelpText>When was the first attempt to contact this customer?</inlineHelpText>
    <label>First Contact Date</label>
    <type>Date</type>
</CustomField>