force-app/main/default/objects/Case/fields/Follow_up_answers__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_answers__c</fullName>
    <label>Follow-up answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>