force-app/main/default/objects/Case/fields/Follow_Up_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_with_Customer__c</fullName>
    <inlineHelpText>At this point, have you been able to talk with the customer at least once to discuss their concerns?</inlineHelpText>
    <label>Follow Up with Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No - Still trying to reach customer</fullName>
            </value>
            <value>
                <fullName>No - Unable to reach customer after several attempts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>