force-app/main/default/objects/Case/fields/Followup_Questions__c.field-meta.xml
<CustomField>
    <fullName>Followup_Questions__c</fullName>
    <label>Followup Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>