force-app/main/default/objects/Case/fields/Freight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount__c</fullName>
    <label>Freight Amount</label>
    <summarizedField>Dispute_Invoices__c.Freight_Amount__c</summarizedField>
    <summaryForeignKey>Dispute_Invoices__c.Dispute__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>