force-app/main/default/objects/Case/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Client Services ENT (CSM, Biz Ops)</fullName>
            </value>
            <value>
                <fullName>Client Services SMB (CSM, BizOps)</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Customer Services</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>Hardware &amp; Manufacturing</fullName>
            </value>
            <value>
                <fullName>Hospitality Services (RAAS)</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HW Delivery</fullName>
            </value>
            <value>
                <fullName>HW Field Support</fullName>
            </value>
            <value>
                <fullName>HW Logistics/Parts</fullName>
            </value>
            <value>
                <fullName>HW Quality</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Group</fullName>
            </value>
            <value>
                <fullName>Product Group - Aloha Suite</fullName>
            </value>
            <value>
                <fullName>Product Group - Silver Suite</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Software Engineering</fullName>
            </value>
            <value>
                <fullName>SW Support</fullName>
            </value>
            <value>
                <fullName>SW Support - Aloha ENT</fullName>
            </value>
            <value>
                <fullName>SW Support - Aloha SMB</fullName>
            </value>
            <value>
                <fullName>SW Support - Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>