force-app/main/default/objects/Case/fields/Get_Current_Dispute_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Get_Current_Dispute_Analyst__c</fullName>
    <description>Verify Current Dispute Analyst</description>
    <formula>IF(LEFT(Dispute_Analyst_Email__c, 8) = $User.Quicklook_ID__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Current Dispute Analyst</label>
    <type>Checkbox</type>
</CustomField>