force-app/main/default/objects/Case/fields/GUID_Id__c.field-meta.xml
<CustomField>
    <fullName>GUID_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Ticket Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>