force-app/main/default/objects/Case/fields/HOSPD_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>HOSPD_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Account name is incorrect, this is the correct Account Name associated with Contact.</description>
    <inlineHelpText>If Account name is incorrect, this is the correct Account Name associated with Contact.</inlineHelpText>
    <label>Correct Account Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>