force-app/main/default/objects/Case/fields/Hospitality_Reporting_Code__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Reporting_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dispute_Close_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>375</fullName>
                <label>Contract Issues/Negotiations - Cancelled Service</label>
            </value>
            <value>
                <fullName>381</fullName>
                <label>Contract Issues/Negotiations - Changed Terms</label>
            </value>
            <value>
                <fullName>382</fullName>
                <label>Contract Issues/Negotiations - COO</label>
            </value>
            <value>
                <fullName>383</fullName>
                <label>Contract Issues/Negotiations - CSAT</label>
            </value>
            <value>
                <fullName>384</fullName>
                <label>Contract Issues/Negotiations - Duplicate Order Request</label>
            </value>
            <value>
                <fullName>385</fullName>
                <label>Contract Issues/Negotiations - Entitlement Inaccuracies</label>
            </value>
            <value>
                <fullName>386</fullName>
                <label>Contract Issues/Negotiations - Freight</label>
            </value>
            <value>
                <fullName>387</fullName>
                <label>Contract Issues/Negotiations - N/A</label>
            </value>
            <value>
                <fullName>388</fullName>
                <label>Contract Issues/Negotiations - PO Incorrect</label>
            </value>
            <value>
                <fullName>389</fullName>
                <label>Contract Issues/Negotiations - Pricing</label>
            </value>
            <value>
                <fullName>390</fullName>
                <label>Contract Issues/Negotiations - Return</label>
            </value>
            <value>
                <fullName>391</fullName>
                <label>Contract Issues/Negotiations - Tax</label>
            </value>
            <value>
                <fullName>392</fullName>
                <label>Contract Issues/Negotiations - Wrong Site#</label>
            </value>
            <value>
                <fullName>394</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Cancelled Service</label>
            </value>
            <value>
                <fullName>405</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Changed Terms</label>
            </value>
            <value>
                <fullName>406</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - COO</label>
            </value>
            <value>
                <fullName>407</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - CSAT</label>
            </value>
            <value>
                <fullName>408</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Duplicate Order Request</label>
            </value>
            <value>
                <fullName>409</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Entitlement Inaccuracies</label>
            </value>
            <value>
                <fullName>410</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Freight</label>
            </value>
            <value>
                <fullName>411</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - N/A</label>
            </value>
            <value>
                <fullName>412</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - PO Incorrect</label>
            </value>
            <value>
                <fullName>413</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Pricing</label>
            </value>
            <value>
                <fullName>414</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Return</label>
            </value>
            <value>
                <fullName>415</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Tax</label>
            </value>
            <value>
                <fullName>416</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement - Wrong Site#</label>
            </value>
            <value>
                <fullName>418</fullName>
                <label>Duplicate Shipment/Invoice - Cancelled Service</label>
            </value>
            <value>
                <fullName>427</fullName>
                <label>Duplicate Shipment/Invoice - Changed Terms</label>
            </value>
            <value>
                <fullName>428</fullName>
                <label>Duplicate Shipment/Invoice - COO</label>
            </value>
            <value>
                <fullName>429</fullName>
                <label>Duplicate Shipment/Invoice - CSAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>