force-app/main/default/objects/Case/fields/HW_Dollars_Submitted_to_BOC__c.field-meta.xml
<CustomField>
    <fullName>HW_Dollars_Submitted_to_BOC__c</fullName>
    <description>This field will be used for HW Dollars submitted to the boc during the PO review process</description>
    <inlineHelpText>HW Dollars submitted to boc for processing</inlineHelpText>
    <label>HW Dollars Submitted to BOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>