force-app/main/default/objects/Case/fields/HWM_Biggest_Customer_Issue__c.field-meta.xml
<CustomField>
    <fullName>HWM_Biggest_Customer_Issue__c</fullName>
    <description>HWM Biggest Customer Issue?</description>
    <inlineHelpText>HWM Biggest Customer Issue?</inlineHelpText>
    <label>HWM Biggest Customer Issue</label>
    <type>TextArea</type>
</CustomField>