force-app/main/default/objects/Case/fields/HWM_Reason__c.field-meta.xml
<CustomField>
    <fullName>HWM_Reason__c</fullName>
    <description>Is this project started because of a customer specified need or internal determination?</description>
    <inlineHelpText>Is this project started because of a customer specified need or internal determination?</inlineHelpText>
    <label>HWM Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Need</fullName>
            </value>
            <value>
                <fullName>Internal Determination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>