force-app/main/default/objects/Case/fields/IC_Name__c.field-meta.xml
<CustomField>
    <fullName>IC_Name__c</fullName>
    <description>This field will be utilized by the Entitlement team if they need to reach out to an IC contact</description>
    <inlineHelpText>The IC can be found via the work order in the remarks or the Regional Installation Report for NAMER.</inlineHelpText>
    <label>Implementation Coordinator Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>