force-app/main/default/objects/Case/fields/Immediate_Detractor_Case_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Detractor_Case_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Detractor Case Escalated</label>
    <type>Checkbox</type>
</CustomField>