force-app/main/default/objects/Case/fields/Immediate_Detractor_Case_Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Detractor_Case_Escalated_Date__c</fullName>
    <label>Immediate Detractor Case Escalated Date</label>
    <type>DateTime</type>
</CustomField>