force-app/main/default/objects/Case/fields/Improvements_Underway__c.field-meta.xml
<CustomField>
    <fullName>Improvements_Underway__c</fullName>
    <inlineHelpText>Are any NCR improvement actions presently underway to address the customer issues?</inlineHelpText>
    <label>Improvements Underway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>