force-app/main/default/objects/Case/fields/Inconsistencies_in_pricing_service_level__c.field-meta.xml
<CustomField>
    <fullName>Inconsistencies_in_pricing_service_level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were any inconsistencies noticed in terms of pricing and/or service level or quantities?</description>
    <inlineHelpText>Were any inconsistencies noticed in terms of pricing and/or service level or quantities?</inlineHelpText>
    <label>Inconsistencies in pricing/service level</label>
    <type>Checkbox</type>
</CustomField>