force-app/main/default/objects/Case/fields/Initial_Back_Bill_Found__c.field-meta.xml
<CustomField>
    <fullName>Initial_Back_Bill_Found__c</fullName>
    <label>Initial Back Bill Found</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>