force-app/main/default/objects/Case/fields/Initial_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Billing_Date__c</fullName>
    <label>Initial Billing Date</label>
    <type>Date</type>
</CustomField>