force-app/main/default/objects/Case/fields/Initial_File_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_File_Value__c</fullName>
    <formula>Account.A360_Current_File_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial File Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>