force-app/main/default/objects/Case/fields/Initial_Future_Bill__c.field-meta.xml
<CustomField>
    <fullName>Initial_Future_Bill__c</fullName>
    <label>Initial Future Bill Found</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>