force-app/main/default/objects/Case/fields/Initial_Total_Software_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Total_Software_Amount__c</fullName>
    <inlineHelpText>The initial dollar amount for possible recovery related to software.</inlineHelpText>
    <label>Initial Total Software Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>