force-app/main/default/objects/Case/fields/Input_The_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Input_The_Error_Message__c</fullName>
    <label>Input The Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>