force-app/main/default/objects/Case/fields/Invoice_Dispute_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Dispute_Description__c</fullName>
    <label>Invoice Dispute Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subcategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URE</fullName>
            </value>
            <value>
                <fullName>Shipping cost</fullName>
            </value>
            <value>
                <fullName>Tax issue</fullName>
            </value>
            <value>
                <fullName>MCN</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Wrong Part</fullName>
            </value>
            <value>
                <fullName>Wrong Price</fullName>
            </value>
            <value>
                <fullName>Wrong Sites</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>