force-app/main/default/objects/Case/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>If this is an inquiry on an existing maintenance bill, what is the invoice #?</description>
    <inlineHelpText>If this is an inquiry on an existing maintenance bill, what is the invoice #?</inlineHelpText>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>