force-app/main/default/objects/Case/fields/Is_Child_Case_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Case_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Child Case Escalated</label>
    <type>Checkbox</type>
</CustomField>