force-app/main/default/objects/Case/fields/Is_Due_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_Date_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Due Date Passed?</label>
    <type>Checkbox</type>
</CustomField>