force-app/main/default/objects/Case/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <description>Checkbox is TRUE when the Current User matches the Case Owner</description>
    <formula>Owner:User.Id = $User.Id</formula>
    <inlineHelpText>Checkbox is TRUE when the Current User matches the Case Owner</inlineHelpText>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>