force-app/main/default/objects/Case/fields/Is_Partner_Assist_Team_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_Assist_Team_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner Assist Team Case ?</label>
    <type>Checkbox</type>
</CustomField>