force-app/main/default/objects/Case/fields/Is_this_a_bulk_request__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_bulk_request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users will check this box if they are submitting a bulk &quot;mass&quot; update</description>
    <inlineHelpText>If this is a bulk update check this box</inlineHelpText>
    <label>Is this a bulk request?</label>
    <type>Checkbox</type>
</CustomField>