force-app/main/default/objects/Case/fields/Is_this_a_chronic_issue__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_chronic_issue__c</fullName>
    <label>Is this a chronic issue?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>