force-app/main/default/objects/Case/fields/Is_this_about_T_M_or_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Is_this_about_T_M_or_maintenance__c</fullName>
    <inlineHelpText>Is this about T&amp;M or maintenance?</inlineHelpText>
    <label>Is this about T&amp;M or maintenance?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>