force-app/main/default/objects/Case/fields/IsDisputeCreateNotificationSend__c.field-meta.xml
<CustomField>
    <fullName>IsDisputeCreateNotificationSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDisputeCreateNotificationSend</label>
    <type>Checkbox</type>
</CustomField>