force-app/main/default/objects/Case/fields/Issue_Department__c.field-meta.xml
<CustomField>
    <fullName>Issue_Department__c</fullName>
    <description>Department related to Issue.</description>
    <inlineHelpText>Department related to Issue.</inlineHelpText>
    <label>Issue Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>304</fullName>
                <label>BOC</label>
            </value>
            <value>
                <fullName>306</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>307</fullName>
                <label>Sales</label>
            </value>
            <value>
                <fullName>756</fullName>
                <label>Sales Support</label>
            </value>
            <value>
                <fullName>757</fullName>
                <label>Client Service Mgmt</label>
            </value>
            <value>
                <fullName>758</fullName>
                <label>Solutions</label>
            </value>
            <value>
                <fullName>308</fullName>
                <label>Services</label>
            </value>
            <value>
                <fullName>305</fullName>
                <label>Collections</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>