force-app/main/default/objects/Case/fields/Issue_Person__c.field-meta.xml
<CustomField>
    <fullName>Issue_Person__c</fullName>
    <label>Issue Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>