force-app/main/default/objects/Case/fields/Issue_s_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Issue_s_Resolved__c</fullName>
    <inlineHelpText>Are the issue(s) completely resolved with the customer?</inlineHelpText>
    <label>Issue(s) Resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>