force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error in Tool</fullName>
            </value>
            <value>
                <fullName>Knowledge/Training</fullName>
            </value>
            <value>
                <fullName>Unresolved/Unworkable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>