force-app/main/default/objects/Case/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Configuration Issue</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>New Data Request</fullName>
            </value>
            <value>
                <fullName>Performance Issue</fullName>
            </value>
            <value>
                <fullName>Product Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Outstanding Full Build Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>