force-app/main/default/objects/Case/fields/latestCaseCommentId__c.field-meta.xml
<CustomField>
    <fullName>latestCaseCommentId__c</fullName>
    <description>This field will store latest case comment id to avoid duplicate case comments</description>
    <label>latestCaseCommentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>