force-app/main/default/objects/Case/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>CaseLead</relationshipName>
    <type>Lookup</type>
</CustomField>