force-app/main/default/objects/Case/fields/Legacy_Incident_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Incident_ID__c</fullName>
    <label>Legacy Incident ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>