force-app/main/default/objects/Case/fields/Legal_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Date__c</fullName>
    <description>Legal Date- the date when the change of ownership occurred</description>
    <inlineHelpText>Legal Date- the date when the change of ownership occurred</inlineHelpText>
    <label>Legal Date</label>
    <type>Date</type>
</CustomField>