force-app/main/default/objects/Case/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <description>This is the sum of the invoice line amount for all the invoices assigned to the dispute.</description>
    <inlineHelpText>This is the sum of the invoice line amount for all the invoices assigned to the dispute.</inlineHelpText>
    <label>Line Amount</label>
    <summarizedField>Dispute_Invoices__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>Dispute_Invoices__c.Dispute__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>