force-app/main/default/objects/Case/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <formula>TEXT( Account.LOB__c)</formula>
    <label>LOB</label>
    <type>Text</type>
</CustomField>